# crewai_assignments

./: README.md
adk/: .gitignore
adk/assignment1/: agent.py
adk/assignmnet2/: agent.py
adk/lab6_1/: agent.py
adk/lab6_2/: agent.py
cli1/: pyproject.toml  report.md
cli1/outputs/: review.txt  solution.py
cli1/src/cli1/: crew.py  main.py
cli1/src/cli1/config/: agents.yaml  tasks.yaml
cli1/src/cli1/tools/: custom_tool.py
cli2/: README.md  pyproject.toml  report.md
cli2/outputs/: trip_plan.txt
cli2/src/cli2/: crew.py  main.py
cli2/src/cli2/config/: agents.yaml  tasks.yaml
cli2/src/cli2/tools/: custom_tool.py
