[project]
name = "cli1"
version = "0.1.0"
description = "cli1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
cli1 = "cli1.main:run"
run_crew = "cli1.main:run"
train = "cli1.main:train"
replay = "cli1.main:replay"
test = "cli1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.crewai.tools]
file_saver = "cli1.tools.custom_tool.FileSaverTool"